testsuite/tests/rename/should_fail/RnStaticValuesFail01.hs
{-# LANGUAGE StaticValues #-}

module RnStaticValuesFail01 where

f x = static x

